--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ django-parler==2.1        # via -r requirements.in
 django-reversion==3.0.7   # via -r requirements.in
 django-taggit==1.3.0      # via wagtail
 django-treebeard==4.3.1   # via wagtail
-django==3.0.9             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail
+django==3.0.9             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
 djangorestframework==3.11.1  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
 draftjs-exporter==2.1.7   # via wagtail
 drf-oidc-auth==0.10.0     # via django-helusers
@@ -116,7 +116,8 @@ unidecode==1.1.1          # via graphene-django, wagtail
 urllib3==1.25.10          # via requests, sentry-sdk
 wagtail-autocomplete==0.6  # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
-wagtail==2.9.3            # via -r requirements.in, wagtail-autocomplete
+wagtail==2.9.3            # via -r requirements.in, wagtail-autocomplete, wagtailfontawesome
+wagtailfontawesome==1.2.1  # via -r requirements.in
 wcwidth==0.2.5            # via prompt-toolkit
 webencodings==0.5.1       # via html5lib
 willow==1.3               # via wagtail
