--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ python3-openid==3.2.0     # via social-auth-core
 pytz==2020.1              # via django, django-modelcluster, l18n
 pyyaml==5.3.1             # via tablib
 requests-oauthlib==1.3.0  # via social-auth-core
-requests==2.24.0          # via django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail
+requests==2.24.0          # via django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
 retrying==1.3.3           # via plotly
 rsa==4.6                  # via python-jose
 rx==1.6.1                 # via graphql-core
@@ -116,6 +116,7 @@ unidecode==1.1.1          # via graphene-django, wagtail
 urllib3==1.25.10          # via requests, sentry-sdk
 wagtail-autocomplete==0.6  # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
+wagtail-generic-chooser==0.1.1  # via -r requirements.in
 wagtail==2.9.3            # via -r requirements.in, wagtail-autocomplete, wagtailfontawesome
 wagtailfontawesome==1.2.1  # via -r requirements.in
 wcwidth==0.2.5            # via prompt-toolkit
