--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ attrs==19.3.0             # via pytest
 backcall==0.2.0           # via ipython
 beautifulsoup4==4.8.2     # via wagtail
 certifi==2020.6.20        # via requests, sentry-sdk
-cffi==1.14.1              # via cryptography
+cffi==1.14.1              # via cryptography, milksnake
 chardet==3.0.4            # via requests
 coverage==5.2.1           # via pytest-cov
 cryptography==3.0         # via -r requirements.in, social-auth-core
@@ -66,6 +66,7 @@ lxml==4.5.2               # via -r requirements.in
 markdown==3.2.2           # via -r requirements.in
 markuppy==1.14            # via tablib
 markupsafe==1.1.1         # via jinja2
+milksnake==0.1.5          # via rustface
 more-itertools==8.4.0     # via pytest
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 odfpy==1.4.1              # via tablib
@@ -100,6 +101,7 @@ requests-oauthlib==1.3.0  # via social-auth-core
 requests==2.24.0          # via django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
 retrying==1.3.3           # via plotly
 rsa==4.6                  # via python-jose
+rustface==0.1.0           # via -r requirements.in
 rx==1.6.1                 # via graphql-core
 sentry-sdk==0.16.3        # via -r requirements.in
 singledispatch==3.4.0.3   # via graphene-django
