--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ django-appconf==1.0.4     # via django-image-cropping
 django-ckeditor==5.9.0    # via -r requirements.in
 django-cors-headers==3.4.0  # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
-django-extensions==3.0.4  # via -r requirements.in
-django-filter==2.3.0      # via -r requirements.in
+django-extensions==3.0.5  # via -r requirements.in
+django-filter==2.3.0      # via -r requirements.in, wagtail
 django-helusers==0.5.6    # via -r requirements.in
 django-image-cropping==1.4.0  # via -r requirements.in
 django-import-export==2.3.0  # via -r requirements.in
@@ -39,7 +39,7 @@ django-parler==2.1        # via -r requirements.in
 django-reversion==3.0.7   # via -r requirements.in
 django-taggit==1.3.0      # via wagtail
 django-treebeard==4.3.1   # via wagtail
-django==3.0.9             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
+django==3.1               # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
 djangorestframework==3.11.1  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
 draftjs-exporter==2.1.7   # via wagtail
 drf-oidc-auth==0.10.0     # via django-helusers
@@ -48,7 +48,7 @@ ecdsa==0.14.1             # via python-jose
 et-xmlfile==1.0.1         # via openpyxl
 future==0.18.2            # via pyjwkest
 graphene-django-optimizer==0.6.2  # via -r requirements.in
-graphene-django==2.12.1   # via -r requirements.in
+graphene-django==2.13.0   # via -r requirements.in
 graphene==2.1.8           # via graphene-django
 graphql-core==2.3.2       # via graphene, graphene-django, graphql-relay
 graphql-relay==2.0.1      # via graphene
@@ -79,7 +79,7 @@ pillow==7.2.0             # via -r requirements.in, easy-thumbnails, wagtail
 plotly==4.9.0             # via -r requirements.in
 pluggy==0.13.1            # via pytest
 promise==2.3              # via graphene-django, graphql-core, graphql-relay
-prompt-toolkit==3.0.5     # via ipython
+prompt-toolkit==3.0.6     # via ipython
 psycopg2-binary==2.8.5    # via -r requirements.in
 ptyprocess==0.6.0         # via pexpect
 py==1.9.0                 # via pytest
@@ -111,7 +111,7 @@ social-auth-core==3.3.3   # via social-auth-app-django
 soupsieve==2.0.1          # via beautifulsoup4
 sqlparse==0.3.1           # via django
 swapper==1.1.2.post1      # via django-orghierarchy
-tablib[html,ods,xls,xlsx,yaml]==2.0.0  # via django-import-export
+tablib[html,ods,xls,xlsx,yaml]==2.0.0  # via django-import-export, wagtail
 toml==0.10.1              # via pytest
 traitlets==4.3.3          # via ipython
 unidecode==1.1.1          # via graphene-django, wagtail
@@ -119,11 +119,11 @@ urllib3==1.25.10          # via requests, sentry-sdk
 wagtail-autocomplete==0.6  # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
 wagtail-generic-chooser==0.1.1  # via -r requirements.in
-wagtail==2.9.3            # via -r requirements.in, wagtail-autocomplete, wagtailfontawesome
+wagtail==2.10             # via -r requirements.in, wagtail-autocomplete, wagtailfontawesome
 wagtailfontawesome==1.2.1  # via -r requirements.in
 wcwidth==0.2.5            # via prompt-toolkit
 webencodings==0.5.1       # via html5lib
-willow==1.3               # via wagtail
+willow==1.4               # via wagtail
 xlrd==1.2.0               # via tablib
 xlsxwriter==1.3.2         # via wagtail
 xlwt==1.3.0               # via tablib
