--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ attrs==19.3.0             # via pytest
 backcall==0.2.0           # via ipython
 beautifulsoup4==4.8.2     # via wagtail
 certifi==2020.6.20        # via requests, sentry-sdk
-cffi==1.14.1              # via cryptography, milksnake
+cffi==1.14.2              # via cryptography, milksnake
 chardet==3.0.4            # via requests
 coverage==5.2.1           # via pytest-cov
 cryptography==3.0         # via -r requirements.in, social-auth-core
@@ -90,7 +90,7 @@ pygments==2.6.1           # via ipython
 pyjwkest==1.4.2           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
 pyparsing==2.4.7          # via packaging
-pytest-cov==2.10.0        # via -r requirements.in
+pytest-cov==2.10.1        # via -r requirements.in
 pytest-django==3.9.0      # via -r requirements.in
 pytest==6.0.1             # via pytest-cov, pytest-django
 python-jose==3.2.0        # via -r requirements.in, django-helusers
@@ -103,7 +103,7 @@ retrying==1.3.3           # via plotly
 rsa==4.6                  # via python-jose
 rustface==0.1.0           # via -r requirements.in
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.16.4        # via -r requirements.in
+sentry-sdk==0.16.5        # via -r requirements.in
 singledispatch==3.4.0.3   # via graphene-django
 six==1.15.0               # via cryptography, django-anymail, django-parler, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==4.0.0  # via -r requirements.in
@@ -119,13 +119,14 @@ urllib3==1.25.10          # via requests, sentry-sdk
 wagtail-autocomplete==0.6  # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
 wagtail-generic-chooser==0.1.1  # via -r requirements.in
-wagtail==2.10             # via -r requirements.in, wagtail-autocomplete, wagtailfontawesome
+wagtail-react-streamfield==1.3.6  # via -r requirements.in
+wagtail==2.10             # via -r requirements.in, wagtail-autocomplete, wagtail-react-streamfield, wagtailfontawesome
 wagtailfontawesome==1.2.1  # via -r requirements.in
 wcwidth==0.2.5            # via prompt-toolkit
 webencodings==0.5.1       # via html5lib
 willow==1.4               # via wagtail
 xlrd==1.2.0               # via tablib
-xlsxwriter==1.3.2         # via wagtail
+xlsxwriter==1.3.3         # via wagtail
 xlwt==1.3.0               # via tablib
 
 # The following packages are considered to be unsafe in a requirements file:
