--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -34,11 +34,11 @@ RUN pip install --upgrade pip
 COPY requirements.txt requirements-prod.txt /code/
 RUN pip install -r /code/requirements-prod.txt -r /code/requirements.txt
 
-COPY package.json /code/
+COPY package.json package-lock.json /code/
+WORKDIR /code
 RUN npm install
 
 COPY . /code/
-WORKDIR /code
 RUN ./manage.py collectstatic --no-input
 RUN ./manage.py compilemessages
 COPY ./docker/app/docker-entrypoint.sh /
