--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "repository": "https://github.com/kausaltech/kausal-watch",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@apollo/client": "^3.1.3",
