--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@apollo/client": "^3.1.3",
+    "@sentry/browser": "^5.22.3",
     "ag-grid-community": "^23.2.1",
     "moment": "^2.27.0"
-  }
+  },
+  "devDependencies": {}
 }
