--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-admin-numeric-filter==0.1.6  # via -r requirements.in
 django-admin-ordering==0.12.0  # via -r requirements.in
 django-anymail[mailgun]==7.2.1  # via -r requirements.in
 django-appconf==1.0.4     # via django-image-cropping
+django-autocomplete-light==3.5.1  # via -r requirements.in
 django-ckeditor==5.9.0    # via -r requirements.in
 django-cors-headers==3.5.0  # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
@@ -96,7 +97,7 @@ pytest-django==3.9.0      # via -r requirements.in
 pytest==6.0.1             # via pytest-cov, pytest-django
 python-jose==3.2.0        # via -r requirements.in, django-helusers
 python3-openid==3.2.0     # via social-auth-core
-pytz==2020.1              # via django, django-modelcluster, l18n
+pytz==2020.1              # via django, l18n
 pyyaml==5.3.1             # via tablib
 requests-oauthlib==1.3.0  # via social-auth-core
 requests==2.24.0          # via django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
@@ -106,7 +107,7 @@ rustface==0.1.0           # via -r requirements.in
 rx==1.6.1                 # via graphql-core
 sentry-sdk==0.17.0        # via -r requirements.in
 singledispatch==3.4.0.3   # via graphene-django
-six==1.15.0               # via cryptography, django-anymail, django-parler, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
+six==1.15.0               # via cryptography, django-anymail, django-autocomplete-light, django-parler, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==4.0.0  # via -r requirements.in
 social-auth-core==3.3.3   # via social-auth-app-django
 soupsieve==2.0.1          # via beautifulsoup4
