--- a/requirements.txt
+++ b/requirements.txt
@@ -8,48 +8,50 @@
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy  # via -r requirements.in
 aniso8601==7.0.0          # via -r requirements.in, graphene
 asgiref==3.2.10           # via django
-attrs==20.1.0             # via pytest
+attrs==20.2.0             # via pytest
 backcall==0.2.0           # via ipython
 beautifulsoup4==4.8.2     # via wagtail
 certifi==2020.6.20        # via requests, sentry-sdk
-cffi==1.14.2              # via cryptography, milksnake
+cffi==1.14.3              # via cryptography, milksnake
 chardet==3.0.4            # via requests
-coverage==5.2.1           # via pytest-cov
-cryptography==3.0         # via -r requirements.in, social-auth-core
-decorator==4.4.2          # via ipython, traitlets
+coreapi==2.3.3            # via -r requirements.in
+coreschema==0.0.4         # via coreapi
+coverage==5.3             # via pytest-cov
+cryptography==3.1.1       # via -r requirements.in, social-auth-core
+decorator==4.4.2          # via ipython
 defusedxml==0.6.0         # via odfpy, python3-openid, social-auth-core
 diff-match-patch==20200713  # via django-import-export
 django-admin-autocomplete-filter==0.6.1  # via -r requirements.in
 django-admin-numeric-filter==0.1.6  # via -r requirements.in
-django-admin-ordering==0.12.0  # via -r requirements.in
-django-anymail[mailgun]==7.2.1  # via -r requirements.in
+django-admin-ordering==0.13.1  # via -r requirements.in
+django-anymail[mailgun]==8.1  # via -r requirements.in
 django-appconf==1.0.4     # via django-image-cropping
-django-autocomplete-light==3.5.1  # via -r requirements.in
-django-ckeditor==5.9.0    # via -r requirements.in
+django-autocomplete-light==3.8.0  # via -r requirements.in
+django-ckeditor==6.0.0    # via -r requirements.in
 django-cors-headers==3.5.0  # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
-django-extensions==3.0.5  # via -r requirements.in
-django-filter==2.3.0      # via -r requirements.in, wagtail
+django-extensions==3.0.9  # via -r requirements.in
+django-filter==2.4.0      # via -r requirements.in, wagtail
 django-helusers==0.5.6    # via -r requirements.in
-django-image-cropping==1.4.0  # via -r requirements.in
-django-import-export==2.3.0  # via -r requirements.in
+django-image-cropping==1.5.0  # via -r requirements.in
+django-import-export==2.4.0  # via -r requirements.in
 django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
 django-modeltrans==0.4.0  # via -r requirements.in
 django-mptt==0.11.0       # via django-orghierarchy
 django-npm==1.0.0         # via -r requirements.in
-django-parler==2.1        # via -r requirements.in
-django-reversion==3.0.7   # via -r requirements.in
+django-parler==2.2        # via -r requirements.in
+django-reversion==3.0.8   # via -r requirements.in
 django-taggit==1.3.0      # via wagtail
 django-treebeard==4.3.1   # via wagtail
-django==3.1               # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
-djangorestframework==3.11.1  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
+django==3.1.2             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
+djangorestframework==3.12.1  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
 draftjs-exporter==2.1.7   # via wagtail
 drf-oidc-auth==0.10.0     # via django-helusers
 easy-thumbnails==2.7      # via -r requirements.in
 ecdsa==0.14.1             # via python-jose
 et-xmlfile==1.0.1         # via openpyxl
 future==0.18.2            # via pyjwkest
-graphene-django-optimizer==0.6.2  # via -r requirements.in
+graphene-django-optimizer==0.7.0  # via -r requirements.in
 graphene-django==2.13.0   # via -r requirements.in
 graphene==2.1.8           # via graphene-django
 graphql-core==2.3.2       # via graphene, graphene-django, graphql-relay
@@ -58,18 +60,18 @@ html5lib==1.1             # via wagtail
 idna==2.10                # via requests
 iniconfig==1.0.1          # via pytest
 ipython-genutils==0.2.0   # via traitlets
-ipython==7.17.0           # via -r requirements.in
+ipython==7.18.1           # via -r requirements.in
+itypes==1.2.0             # via coreapi
 jdcal==1.4.1              # via openpyxl
 jedi==0.17.2              # via ipython
-jinja2==2.11.2            # via -r requirements.in
+jinja2==2.11.2            # via -r requirements.in, coreschema
 l18n==2018.5              # via wagtail
 libvoikko==4.3            # via -r requirements.in
 lxml==4.5.2               # via -r requirements.in
-markdown==3.2.2           # via -r requirements.in
+markdown==3.3             # via -r requirements.in
 markuppy==1.14            # via tablib
 markupsafe==1.1.1         # via jinja2
 milksnake==0.1.5          # via rustface
-more-itertools==8.4.0     # via pytest
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 odfpy==1.4.1              # via tablib
 openpyxl==3.0.5           # via tablib
@@ -78,57 +80,58 @@ parso==0.7.1              # via jedi
 pexpect==4.8.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==7.2.0             # via -r requirements.in, easy-thumbnails, wagtail
-plotly==4.9.0             # via -r requirements.in
+plotly==4.11.0            # via -r requirements.in
 pluggy==0.13.1            # via pytest
 promise==2.3              # via graphene-django, graphql-core, graphql-relay
-prompt-toolkit==3.0.6     # via ipython
-psycopg2-binary==2.8.5    # via -r requirements.in
+prompt-toolkit==3.0.7     # via ipython
+psycopg2-binary==2.8.6    # via -r requirements.in
 ptyprocess==0.6.0         # via pexpect
 py==1.9.0                 # via pytest
 pyasn1==0.4.8             # via python-jose, rsa
 pycparser==2.20           # via cffi
 pycryptodomex==3.9.8      # via pyjwkest
-pygments==2.6.1           # via ipython
+pygments==2.7.1           # via ipython
 pyjwkest==1.4.2           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
 pyparsing==2.4.7          # via packaging
 pytest-cov==2.10.1        # via -r requirements.in
-pytest-django==3.9.0      # via -r requirements.in
-pytest==6.0.1             # via pytest-cov, pytest-django
+pytest-django==3.10.0     # via -r requirements.in
+pytest==6.1.1             # via pytest-cov, pytest-django
 python-jose==3.2.0        # via -r requirements.in, django-helusers
 python3-openid==3.2.0     # via social-auth-core
 pytz==2020.1              # via django, l18n
-pyyaml==5.3.1             # via tablib
+pyyaml==5.3.1             # via -r requirements.in, tablib
 requests-oauthlib==1.3.0  # via social-auth-core
-requests==2.24.0          # via django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
+requests==2.24.0          # via coreapi, django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
 retrying==1.3.3           # via plotly
 rsa==4.6                  # via python-jose
 rustface==0.1.0           # via -r requirements.in
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.17.0        # via -r requirements.in
+sentry-sdk==0.18.0        # via -r requirements.in
 singledispatch==3.4.0.3   # via graphene-django
-six==1.15.0               # via cryptography, django-anymail, django-autocomplete-light, django-parler, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
+six==1.15.0               # via cryptography, django-autocomplete-light, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core
 social-auth-app-django==4.0.0  # via -r requirements.in
 social-auth-core==3.3.3   # via social-auth-app-django
 soupsieve==2.0.1          # via beautifulsoup4
-sqlparse==0.3.1           # via django
+sqlparse==0.4.1           # via django
 swapper==1.1.2.post1      # via django-orghierarchy
 tablib[html,ods,xls,xlsx,yaml]==2.0.0  # via django-import-export, wagtail
 toml==0.10.1              # via pytest
-traitlets==4.3.3          # via ipython
+traitlets==5.0.4          # via ipython
 unidecode==1.1.1          # via graphene-django, wagtail
+uritemplate==3.0.1        # via coreapi
 urllib3==1.25.10          # via requests, sentry-sdk
 wagtail-autocomplete==0.6  # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
 wagtail-generic-chooser==0.1.1  # via -r requirements.in
 wagtail-react-streamfield==1.3.6  # via -r requirements.in
-wagtail==2.10             # via -r requirements.in, wagtail-autocomplete, wagtail-react-streamfield, wagtailfontawesome
+wagtail==2.10.2           # via -r requirements.in, wagtail-autocomplete, wagtail-react-streamfield, wagtailfontawesome
 wagtailfontawesome==1.2.1  # via -r requirements.in
 wcwidth==0.2.5            # via prompt-toolkit
 webencodings==0.5.1       # via html5lib
 willow==1.4               # via wagtail
 xlrd==1.2.0               # via tablib
-xlsxwriter==1.3.3         # via wagtail
+xlsxwriter==1.3.6         # via wagtail
 xlwt==1.3.0               # via tablib
 
 # The following packages are considered to be unsafe in a requirements file:
