--- a/requirements.txt
+++ b/requirements.txt
@@ -40,10 +40,11 @@ django-modeltrans==0.4.0  # via -r requirements.in
 django-mptt==0.11.0       # via django-orghierarchy
 django-npm==1.0.0         # via -r requirements.in
 django-parler==2.2        # via -r requirements.in
+django-redis==4.12.1      # via -r requirements.in
 django-reversion==3.0.8   # via -r requirements.in
 django-taggit==1.3.0      # via wagtail
 django-treebeard==4.3.1   # via wagtail
-django==3.1.2             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
+django==3.1.2             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-redis, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
 djangorestframework==3.12.1  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
 draftjs-exporter==2.1.7   # via wagtail
 drf-oidc-auth==0.10.0     # via django-helusers
@@ -101,6 +102,7 @@ python-jose==3.2.0        # via -r requirements.in, django-helusers
 python3-openid==3.2.0     # via social-auth-core
 pytz==2020.1              # via django, l18n
 pyyaml==5.3.1             # via -r requirements.in, tablib
+redis==3.5.3              # via django-redis
 requests-oauthlib==1.3.0  # via social-auth-core
 requests==2.24.0          # via coreapi, django-anymail, django-helusers, django-orghierarchy, pyjwkest, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
 retrying==1.3.3           # via plotly
