--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.1.3",
     "@sentry/browser": "^5.22.3",
     "ag-grid-community": "^23.2.1",
+    "mjml": "^4.7.1",
     "moment": "^2.27.0"
   },
   "devDependencies": {}
