--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ ignore=D100,D104,D105,D200,D203,D400
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = aplans.settings
-norecursedirs = node_modules .git venv
+norecursedirs = node_modules .git venv Attic
 flake8-ignore =
     */tests/*.py ALL
     */migrations/*.py ALL
