--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,7 @@ ignore=D100,D104,D105,D200,D203,D400
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = aplans.settings
-norecursedirs = node_modules .git venv Attic
-flake8-ignore =
-    */tests/*.py ALL
-    */migrations/*.py ALL
+norecursedirs = node_modules data .git venv Attic
 addopts = --cov aplans --cov actions --cov indicators --cov users --cov insight --cov  people
+filterwarnings =
+    ignore::django.utils.deprecation.RemovedInDjango40Warning
