--- a/requirements.txt
+++ b/requirements.txt
@@ -309,6 +309,8 @@ tablib[html,ods,xls,xlsx,yaml]==3.0.0
     # via
     #   django-import-export
     #   wagtail
+tinycss2==1.1.0
+    # via -r requirements.in
 toml==0.10.2
     # via pytest
 unidecode==1.1.2
@@ -347,7 +349,9 @@ wagtail==2.11.3
 wagtailfontawesome==1.2.1
     # via -r requirements.in
 webencodings==0.5.1
-    # via html5lib
+    # via
+    #   html5lib
+    #   tinycss2
 willow==1.4
     # via wagtail
 xlrd==2.0.1
