--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ django-redis==4.12.1      # via -r requirements.in
 django-reversion==3.0.8   # via -r requirements.in
 django-taggit==1.3.0      # via wagtail
 django-treebeard==4.4     # via wagtail
-django==3.1.5             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-redis, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtailfontawesome
+django==3.1.5             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-redis, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtail-grapple, wagtailfontawesome
 djangorestframework==3.12.2  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
 draftjs-exporter==2.1.7   # via wagtail
 drf-oidc-auth==1.0.0      # via django-helusers
@@ -53,9 +53,9 @@ easy-thumbnails==2.7.1    # via -r requirements.in
 ecdsa==0.14.1             # via python-jose
 et-xmlfile==1.0.1         # via openpyxl
 graphene-django-optimizer==0.8.0  # via -r requirements.in
-graphene-django==2.15.0   # via -r requirements.in
+graphene-django==2.13.0   # via -r requirements.in, wagtail-grapple
 graphene==2.1.8           # via graphene-django
-graphql-core==2.3.2       # via graphene, graphene-django, graphql-relay
+graphql-core==2.3.2       # via graphene, graphene-django, graphql-relay, wagtail-grapple
 graphql-relay==2.0.1      # via graphene
 html5lib==1.1             # via wagtail
 idna==2.10                # via requests
@@ -89,7 +89,7 @@ pytest-django==4.1.0      # via -r requirements.in
 pytest==6.2.1             # via pytest-cov, pytest-django
 python-jose==3.2.0        # via -r requirements.in, django-helusers
 python3-openid==3.2.0     # via social-auth-core
-pytz==2020.5              # via django, django-modelcluster, l18n
+pytz==2020.5              # via django, l18n
 pyyaml==5.3.1             # via -r requirements.in, tablib
 redis==3.5.3              # via django-redis
 requests-oauthlib==1.3.0  # via social-auth-core
@@ -107,16 +107,17 @@ soupsieve==2.1            # via beautifulsoup4
 sqlparse==0.4.1           # via django
 swapper==1.1.2.post1      # via django-orghierarchy
 tablib[html,ods,xls,xlsx,yaml]==3.0.0  # via django-import-export, wagtail
-text-unidecode==1.3       # via graphene-django
 toml==0.10.2              # via pytest
-unidecode==1.1.2          # via wagtail
+unidecode==1.1.2          # via graphene-django, wagtail
 uritemplate==3.0.1        # via -r requirements.in, coreapi
 urllib3==1.26.2           # via requests, sentry-sdk
 wagtail-autocomplete==0.6  # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
 wagtail-generic-chooser==0.1.1  # via -r requirements.in
+wagtail-grapple==0.10.1   # via -r requirements.in
+wagtail-headless-preview==0.1.4  # via wagtail-grapple
 wagtail-react-streamfield==1.3.6  # via -r requirements.in
-wagtail==2.11.3           # via -r requirements.in, wagtail-autocomplete, wagtail-orderable, wagtail-react-streamfield, wagtailfontawesome
+wagtail==2.11.3           # via -r requirements.in, wagtail-autocomplete, wagtail-grapple, wagtail-headless-preview, wagtail-orderable, wagtail-react-streamfield, wagtailfontawesome
 wagtailfontawesome==1.2.1  # via -r requirements.in
 webencodings==0.5.1       # via html5lib
 willow==1.4               # via wagtail
