--- a/requirements.txt
+++ b/requirements.txt
@@ -146,6 +146,10 @@ ecdsa==0.14.1
     # via python-jose
 et-xmlfile==1.0.1
     # via openpyxl
+factory-boy==3.2.0
+    # via pytest-factoryboy
+faker==6.1.1
+    # via factory-boy
 graphene-django-optimizer==0.8.0
     # via -r requirements.in
 graphene-django==2.13.0
@@ -166,6 +170,8 @@ html5lib==1.1
     # via wagtail
 idna==2.10
     # via requests
+inflection==0.5.1
+    # via pytest-factoryboy
 iniconfig==1.1.1
     # via pytest
 itypes==1.2.0
@@ -232,10 +238,15 @@ pytest-cov==2.10.1
     # via -r requirements.in
 pytest-django==4.1.0
     # via -r requirements.in
+pytest-factoryboy==2.1.0
+    # via -r requirements.in
 pytest==6.2.1
     # via
     #   pytest-cov
     #   pytest-django
+    #   pytest-factoryboy
+python-dateutil==2.8.1
+    # via faker
 python-jose==3.2.0
     # via
     #   -r requirements.in
@@ -291,6 +302,7 @@ six==1.15.0
     #   l18n
     #   plotly
     #   promise
+    #   python-dateutil
     #   python-jose
     #   retrying
     #   singledispatch
@@ -309,6 +321,8 @@ tablib[html,ods,xls,xlsx,yaml]==3.0.0
     # via
     #   django-import-export
     #   wagtail
+text-unidecode==1.3
+    # via faker
 tinycss2==1.1.0
     # via -r requirements.in
 toml==0.10.2
